Appbar Fixes
-Mobile Footer position set to "sticky" to prevent content from hiding underneath
-Navbar now disappears on scroll
-Need to add space to task container so it is not hidden under navbar

--- a/src/css/MobileFooter.css
+++ b/src/css/MobileFooter.css
@@ -9,8 +9,8 @@
     left: 0px;
     right: 0px;
     margin: 0 auto;
-    height: 36px;
-    width: 76px;
+    height: 34px;
+    width: 70px;
     background-color: white;
     border-radius: 0 0 80px 80px;
 }
